--- a/app/css/sideNavBar.css
+++ b/app/css/sideNavBar.css
@@ -10,7 +10,7 @@
     z-index: 9999;
     top: 0;
     right: 0;
-    background-color: #111;
+    background: -webkit-linear-gradient(left, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -86,18 +86,18 @@ button.absoluteCancel {
   
   button.absoluteSave {
     position: absolute;
-    width: 30%;
-    bottom: 60px;
+    width: 80px;
+    bottom: 0;
     border: 8px solid #cccccc;
+    border-radius: 2px;
     background-color: #cccccc;
-    left: 40px;
 } 
 
 button.absoluteCancel {
     position: absolute;
-    width: 30%;
-    bottom: 60px;
+    width: 80px;
+    bottom: 0;
     border: 8px solid #cccccc;
+    border-radius: 2px;
     background-color: #cccccc;
-    left: 150px;
 } 
