--- a/app/css/tabs.css
+++ b/app/css/tabs.css
@@ -1,4 +1,5 @@
 /* Style the tab */
+
 .tab {
     overflow: hidden;
     border: 1px solid #ccc;
@@ -6,6 +7,7 @@
 }
 
 /* Style the buttons inside the tab */
+
 .tab button {
     background-color: inherit;
     float: left;
@@ -19,16 +21,19 @@
 }
 
 /* Change background color of buttons on hover */
+
 .tab button:hover {
     background-color: rgb(70, 68, 68);
 }
 
 /* Create an active/current tablink class */
+
 .tab button.active {
     background-color: rgb(70, 68, 68);
 }
 
 /* Style the tab content */
+
 .tabcontent {
     display: none;
     padding: 6px 12px;
@@ -37,8 +42,43 @@
 }
 
 .tabEditable {
-    background-color: #111;
+    background: -webkit-linear-gradient(left, rgba(19,19,19,1) 0%, rgba(28,28,28,1) 9%, rgba(43,43,43,1) 24%, rgba(17,17,17,1) 40%, rgba(0,0,0,1) 49%, rgba(44,44,44,1) 50%, rgba(71,71,71,1) 61%, rgba(102,102,102,1) 75%, rgba(89,89,89,1) 88%, rgba(76,76,76,1) 100%);
     color: white;
     font-family: 'Courier New', Courier, monospace;
     min-height: 300px;
 }
+
+.glass {
+    /* background styles */
+    position: relative;
+    display: inline-block;
+    padding: 15px;
+    /*for compatibility with older browsers*/
+    background: -webkit-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    /* text styles */
+    text-decoration: none;
+    color: rgb(0, 0, 0);
+    font-size: 10px;
+    font-family: sans-serif;
+    font-weight: 100;
+    border-radius: 3px;
+    box-shadow: 0px 1px 4px -2px #333;
+    text-shadow: 0px -1px #333;
+    bottom: 0;
+    position: fixed
+}
+
+.glass:after {
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: calc(100% - 4px);
+    height: 50%;
+    background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.2));
+}
+
+.glass:hover{
+	background: -webkit-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+}
+
