--- a/app/css/sideNavBar.css
+++ b/app/css/sideNavBar.css
@@ -1,103 +1,37 @@
-/* Utility */
-.padding-top-0 {
-    padding-top: 0px !important;
-}
 /* side navbar */
+
 .sidenav {
-    height: 100%;
+    height: 407px;
     width: 0;
     position: fixed;
-    z-index: 9999;
+    z-index: 99999999999;
     top: 0;
     right: 0;
-    background: -webkit-linear-gradient(left, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(44,44,44,1) 50%, rgba(0,0,0,1) 51%, rgba(17,17,17,1) 60%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
+    background-color: #847070;
     overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 60px;
-}
-
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-}
-
-.sidenav a:hover {
-    color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
 }
 
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+    .sidenav {
+        padding-top: 15px;
+    }
 }
 
 button.absoluteSave {
     position: absolute;
     width: 30%;
-    bottom: 160px;
+    bottom: 10px;
     border: 8px solid #cccccc;
     background-color: #cccccc;
     left: 40px;
-} 
+}
 
 button.absoluteCancel {
     position: absolute;
     width: 30%;
-    bottom: 160px;
+    bottom: 10px;
     border: 8px solid #cccccc;
     background-color: #cccccc;
     left: 150px;
-} 
-  .topnav {
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding-left: 43px 43px;
-    padding-right: 43px 43px;
-    text-decoration: none;
-    font-size: 20px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-  }
-  
-  button.absoluteSave {
-    position: absolute;
-    width: 80px;
-    bottom: 0;
-    border: 8px solid #cccccc;
-    border-radius: 2px;
-    background-color: #cccccc;
-} 
-
-button.absoluteCancel {
-    position: absolute;
-    width: 80px;
-    bottom: 0;
-    border: 8px solid #cccccc;
-    border-radius: 2px;
-    background-color: #cccccc;
-} 
+}
